<resources>
    <string name="app_name">Tripline</string>
    <string name="title_stream">Stream</string>
    <string name="title_addtrip">Add Trip</string>
    <string name="title_profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_trip">ADD TRIP</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="login">LOG IN</string>
    <string name="register_prompt">No account yet?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">confirm password</string>
    <string name="profile_picture">PROFILE PICTURE</string>
    <string name="name">NAME</string>
    <string name="add_a_trip">ADD A TRIP</string>
    <string name="title">title</string>
    <string name="log_out">LOG OUT</string>
    <string name="trips">trips</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="add_event">ADD EVENT</string>
    <string name="add_an_event">ADD AN EVENT</string>
    <string name="description">description</string>
    <string name="activity_type">ACTIVITY TYPE</string>
    <string name="photo_s">photos</string>
    <string name="location">location</string>
    <string name="cover_photo">cover photo</string>
    <string name="end_date">end date</string>
    <string name="start_date">start date</string>
    <string name="trip_details">Trip Details</string>
    <string name="map">Map</string>
    <string name="remove">REMOVE</string>
    <string name="removed">REMOVED</string>
    <string name="unfollow">UNFOLLOW</string>
    <string name="unfollowed">UNFOLLOWED</string>
    <string name="search">Search</string>
    <string name="event_type">event type</string>
    <string name="no_results_found">No results found:(</string>
    <string name="saved_trips">saved trips</string>
    <string name="last_name">last name</string>
    <string name="first_name">first name</string>
    <string name="profile_photo">profile photo</string>
    <string name="add_photos">add photos</string>

    <string-array name="eventTypes">
        <item>restaurant</item>
        <item>hotel</item>
        <item>activity</item>
        <item>tour</item>
        <item>event</item>
    </string-array>

    <string-array name="initialLengthSliderValues">
        <item>4</item>
        <item>14</item>
    </string-array>

</resources>
