<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_stream">

    <fragment
        android:id="@+id/navigation_stream"
        android:name="com.example.tripline.ui.stream.StreamFragment"
        android:label="@string/title_stream"
        tools:layout="@layout/fragment_stream" />

    <fragment
        android:id="@+id/navigation_addtrip"
        android:name="com.example.tripline.ui.addtrip.AddTripFragment"
        android:label="@string/title_addtrip"
        tools:layout="@layout/fragment_addtrip" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.tripline.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>